# Piecewise-Differential-Zstd-Coder

./: CMakeLists.txt  README.md
c++/: CMakeLists.txt
c++/src/: CMakeLists.txt
c++/src/definitions/: CMakeLists.txt  attributes.hpp  bit_utilities.hpp  bit_writer.hpp  codecs.hpp  compressor.hpp  custom_algorithms.hpp  delta.hpp  delta_zig_zag.hpp  error_monad.hpp  memory_utils.hpp  not_implemented_exception.hpp  rice_map.hpp  rice_map_sse.hpp  simd_acceleration.hpp  simple_block_delta.hpp  svb_core.hpp  unconditional286_compressor.hpp  unconditional_2_8_6_vb.hpp  utils.hpp  variable_byte_allocator.hpp  vector_utilities.hpp
c++/src/definitions/buffered_skip_bit_output_stream/: buffered_skip_bit_output_stream.hpp
c++/src/definitions/unconditional286/: unconditional286_api.hpp  unconditional286_compressor_sse.hpp  unconditional286_medium_large_data_output_stream.hpp  unconditional286_read_stream_types.hpp  unconditional286_read_streams.hpp  unconditional286_small_data_input_stream.hpp  unconditional286_small_data_output_stream.hpp  unconditional286_utils.hpp  unconditional286_vb_serial.hpp  unconditional286_vb_sse.hpp
c++/test/: CMakeLists.txt  delta_map_tests.hpp  delta_zig_zag_tests.hpp  parallel_test.cpp  rice_map_sse_compatibility_tests.hpp  rice_map_tests.hpp  testing_vector_utilities.hpp  unconditional_286_compatibility_tests.hpp  unconditional_286_compressor_tests.hpp  unconditional_286_read_stream_tests.hpp  unconditional_2_8_6_vb_tests.hpp  utils_tests.hpp  valgrind_tests.cpp  vector_utilities_tests.hpp
